# djangosvelterecipe

./: .gitignore  README.md  copilot-instructions.md
backend/: README.md  pyproject.toml
backend/accounts/: api.py  schemas.py
backend/notifications/: admin.py  apps.py  forms.py  models.py  services.py  signals.py
backend/notifications/migrations/: 0001_initial.py  0002_seed_templates.py  0003_add_comment_template.py
backend/recipe_platform/: api.py  settings.py  urls.py
backend/recipes/: admin.py  api.py  apps.py  models.py  schemas.py  signals.py  upstash_search.py
backend/recipes/management/commands/: upstash_backfill_recipes.py
backend/recipes/migrations/: 0001_initial.py  0002_recipe_description_html_recipe_meta_description_and_more.py
backend/sitecontent/: admin.py  api.py  apps.py  models.py  schemas.py
backend/sitecontent/migrations/: 0001_initial.py
frontend/: .env.example  package.json  pnpm-lock.yaml
frontend/src/: app.css
frontend/src/lib/: config.ts  index.ts
frontend/src/routes/: +page.svelte
